// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ServiceOfferingCardBody /> should render correctly 1`] = `
<ServiceOfferingCardBody
  display_name="display name"
  distributor="Red Hat"
  long_description="long description"
  name="Foo"
>
  <Styled(CardBody)>
    <CardBody
      className="sc-AxheI jOYejY"
    >
      <div
        className="pf-c-card__body sc-AxheI jOYejY"
      >
        <TextContent>
          <div
            className="pf-c-content"
          >
            <ConditionalLink>
              <Text
                component="h3"
                title="Foo"
              >
                <h3
                  className=""
                  data-pf-content={true}
                  title="Foo"
                >
                  <styled.div>
                    <div
                      className="sc-AxgMl ytwOc"
                    >
                      Foo
                    </div>
                  </styled.div>
                </h3>
              </Text>
            </ConditionalLink>
            <Text
              component="small"
            >
              <small
                className=""
                data-pf-content={true}
              >
                Red Hat
              </small>
            </Text>
          </div>
        </TextContent>
        <ItemDetails
          display_name="display name"
          long_description="long description"
          toDisplay={
            Array [
              "long_description",
            ]
          }
        >
          <Truncate
            ellipsis={
              <Tooltip
                content={
                  <div>
                    long description
                  </div>
                }
              >
                <span>
                  ...
                </span>
              </Tooltip>
            }
            key="tcard-prop-long_description"
            lines={3}
            trimWhitespace={false}
            width={0}
          >
            <span
              width={0}
            >
              <span />
              <span>
                <styled.div
                  key="card-prop-long_description"
                >
                  <div
                    className="sc-AxjAm hDziHm"
                  >
                    long description
                  </div>
                </styled.div>
              </span>
              <span
                style={
                  Object {
                    "left": 0,
                    "position": "fixed",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
              >
                <Tooltip
                  content={
                    <div>
                      long description
                    </div>
                  }
                >
                  <Popper
                    appendTo={[Function]}
                    distance={15}
                    enableFlip={true}
                    flipBehavior={
                      Array [
                        "top",
                        "right",
                        "bottom",
                        "left",
                        "top",
                        "right",
                        "bottom",
                      ]
                    }
                    isVisible={false}
                    onBlur={[Function]}
                    onDocumentClick={false}
                    onDocumentKeyDown={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTriggerEnter={[Function]}
                    placement="top"
                    popper={
                      <div
                        className="pf-c-tooltip"
                        id="pf-tooltip-1"
                        role="tooltip"
                        style={
                          Object {
                            "maxWidth": null,
                            "opacity": 0,
                            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                          }
                        }
                      >
                        <TooltipArrow />
                        <TooltipContent
                          isLeftAligned={false}
                        >
                          <div>
                            long description
                          </div>
                        </TooltipContent>
                      </div>
                    }
                    popperMatchesTriggerWidth={false}
                    positionModifiers={
                      Object {
                        "bottom": "pf-m-bottom",
                        "left": "pf-m-left",
                        "right": "pf-m-right",
                        "top": "pf-m-top",
                      }
                    }
                    trigger={
                      <span>
                        ...
                      </span>
                    }
                    zIndex={9999}
                  >
                    <FindRefWrapper
                      onFoundRef={[Function]}
                    >
                      <span>
                        ...
                      </span>
                    </FindRefWrapper>
                  </Popper>
                </Tooltip>
              </span>
            </span>
          </Truncate>
        </ItemDetails>
      </div>
    </CardBody>
  </Styled(CardBody)>
</ServiceOfferingCardBody>
`;

exports[`<ServiceOfferingCardBody /> should render correctly with alternative values 1`] = `
<ServiceOfferingCardBody
  description="Bar"
  name="Foo"
>
  <Styled(CardBody)>
    <CardBody
      className="sc-AxheI jOYejY"
    >
      <div
        className="pf-c-card__body sc-AxheI jOYejY"
      >
        <TextContent>
          <div
            className="pf-c-content"
          >
            <ConditionalLink>
              <Text
                component="h3"
                title="Foo"
              >
                <h3
                  className=""
                  data-pf-content={true}
                  title="Foo"
                >
                  <styled.div>
                    <div
                      className="sc-AxgMl ytwOc"
                    >
                      Foo
                    </div>
                  </styled.div>
                </h3>
              </Text>
            </ConditionalLink>
          </div>
        </TextContent>
        <ItemDetails
          description="Bar"
          toDisplay={
            Array [
              "description",
            ]
          }
        >
          <Truncate
            ellipsis={
              <Tooltip
                content={
                  <div>
                    Bar
                  </div>
                }
              >
                <span>
                  ...
                </span>
              </Tooltip>
            }
            key="tcard-prop-description"
            lines={3}
            trimWhitespace={false}
            width={0}
          >
            <span
              width={0}
            >
              <span />
              <span>
                <styled.div
                  key="card-prop-description"
                >
                  <div
                    className="sc-AxjAm hDziHm"
                  >
                    Bar
                  </div>
                </styled.div>
              </span>
              <span
                style={
                  Object {
                    "left": 0,
                    "position": "fixed",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
              >
                <Tooltip
                  content={
                    <div>
                      Bar
                    </div>
                  }
                >
                  <Popper
                    appendTo={[Function]}
                    distance={15}
                    enableFlip={true}
                    flipBehavior={
                      Array [
                        "top",
                        "right",
                        "bottom",
                        "left",
                        "top",
                        "right",
                        "bottom",
                      ]
                    }
                    isVisible={false}
                    onBlur={[Function]}
                    onDocumentClick={false}
                    onDocumentKeyDown={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTriggerEnter={[Function]}
                    placement="top"
                    popper={
                      <div
                        className="pf-c-tooltip"
                        id="pf-tooltip-2"
                        role="tooltip"
                        style={
                          Object {
                            "maxWidth": null,
                            "opacity": 0,
                            "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                          }
                        }
                      >
                        <TooltipArrow />
                        <TooltipContent
                          isLeftAligned={false}
                        >
                          <div>
                            Bar
                          </div>
                        </TooltipContent>
                      </div>
                    }
                    popperMatchesTriggerWidth={false}
                    positionModifiers={
                      Object {
                        "bottom": "pf-m-bottom",
                        "left": "pf-m-left",
                        "right": "pf-m-right",
                        "top": "pf-m-top",
                      }
                    }
                    trigger={
                      <span>
                        ...
                      </span>
                    }
                    zIndex={9999}
                  >
                    <FindRefWrapper
                      onFoundRef={[Function]}
                    >
                      <span>
                        ...
                      </span>
                    </FindRefWrapper>
                  </Popper>
                </Tooltip>
              </span>
            </span>
          </Truncate>
        </ItemDetails>
      </div>
    </CardBody>
  </Styled(CardBody)>
</ServiceOfferingCardBody>
`;
